<resources>
    <string name="textOTP">verify +toan**********</string>
    <string name="app_name">CozaExpress</string>
    <string name="textOtpMessage">Enter the OTP code to verify your email</string>
    <string name="str_please_white_0_second_for_send_again">Please white 0 second for send again.</string>
    <string name="btnContinue">continue</string>
    <string name="action_home">Trang Chủ</string>
    <string name="action_mall">Bảng Tin</string>
    <string name="action_message">Tin Nhắn</string>
    <string name="action_cart">Giỏ Hàng</string>
    <string name="action_account">Tài Khoản</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="view_fragment">Xem Dạo</string>
    <string name="followed_fragment">Đã Theo Dõi</string>
    <string-array name="country">
        <item>Áo Thun Nam</item>
        <item>Áo Măng Tô</item>
        <item>Áo Thun Nam Nữ</item>
        <item>Áo Khoác Nam</item>
        <item>Áo Ba Lỗ</item>
        <item>Quần Âu Nam</item>
        <item>Quần Jean</item>
        <item>Quần Bò</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_img_otp">img otp</string>

    <string name="orderdetails">Đặt Hàng Thành Công !. \n Đây là mã vận đơn của bạn !</string>
    <string name="welcome_bac">
        Welcome Back!
    </string>
    <string name="forgot_pass">
        Forgot Password?
    </string>
    <string name="already_hav">
        ALREADY HAVE AN ACCOUNT? SIGN UP
    </string>
    <string name="have_acc">
         You have account ? Sign in now
    </string>
    <string name="Sign_in">Đăng Nhập</string>
    <string name="Sign_up">Đăng Ký</string>
    <string name="login">
       LOGIN
    </string>
    <string name="title_activity_category">CategoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="slide_1_title">Exclusive Products</string>
    <string name="slide_1_desc">Get products which are unique and only available at our shops !</string>

    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>

    <string name="slide_3_title">Hassle Free Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>

    <string name="slide_4_title">Fast Delivery</string>
    <string name="slide_4_desc">Blazing fast order delivery within time !</string>

    <string name="register">Register</string>
    <string name="forgot">Forgot Password</string>
    <string name="login_now">Login Now</string>
    <string name="register_now">Register Now</string>

    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>

    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_phone_number_password">Phone number, password</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_e_mail_address">E-mail Address</string>
    <string name="str_confirmation_password">Confirmation Password</string>
    <string name="str_create_account">Create Account</string>
    <string name="str_already_a_member_login_here">Already a Member? Login Here</string>

</resources>