<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/home">
    </item>

    <item android:id="@+id/action_mall"
        android:title="@string/action_mall"
        android:icon="@drawable/shopping_outline">
    </item>

    <item android:id="@+id/action_live"
        android:title="@string/action_message"
        android:icon="@drawable/facebook_messenger">
    </item>

    <item android:id="@+id/action_notification"
        android:title="@string/action_notification"
        android:icon="@drawable/bell_outline">
    </item>

    <item android:id="@+id/action_account"
        android:title="@string/action_account"
        android:icon="@drawable/account">
    </item>

</menu>